langda/history/DoubleDC_5Round/test_history/benchrps__:precise.pl_run5/#test_results_result.txt
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 41:77.Error evaluating Problog model:
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_builtin.py", line 817, in _builtin_lt
    check_mode((arg1, arg2), ["gg"], functor="<", **kwdargs)
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_builtin.py", line 630, in check_mode
    raise CallModeError(functor, args, accepted, location=location)
problog.engine_builtin.CallModeError: Invalid argument types for call to '</2': arguments: (X1, 0), expected: (ground, ground) at 41:108.% Problog Inference Result：
determine_winner([rock, rock, rock],[paper, paper, scissor],'Player 2') = 1.0000
determine_winner([rock, rock, rock],[paper, paper, scissor],'Draw') = 1.0000